--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="change_n_language">Change \n Language</string>
     <string name="categories">Categories</string>
+    <string name="profile_picture">Profile Picture</string>
 
     <string-array name="spinner_1">
 
@@ -16,5 +17,6 @@
         <item>Item 3</item>
 
     </string-array>
+    <string name="title_activity_maps">MapsActivity</string>
 
 </resources>
